--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <main class="container">
         <div class="row row-cols-1">
             <section class="col-md">
-                <img src="img/img_01.jpg" alt="girl meditate">
+                <img src="photo/img_01.jpg" alt="girl meditate">
                 <p class="par">
                     STYLE
                 </p>
@@ -42,7 +42,7 @@
                 </p>
             </section>
             <section class="col-md">
-                <img src="img/img_02.jpg" alt="fog over the lake">
+                <img src="photo/img_02.jpg" alt="fog over the lake">
                 <p class="par">
                     STYLE
                 </p>
@@ -53,7 +53,7 @@
                 </p>
             </section>
             <section class="col-md">
-                <img src="img/img_03.jpg" alt="girl in mask with laptop">
+                <img src="photo/img_03.jpg" alt="girl in mask with laptop">
                 <p class="par">
                     VIDEOS
                 </p>
@@ -64,7 +64,7 @@
                 </p>
             </section>
             <section class="col-md">
-                <img src="img/img_04.jpg" alt="city view">
+                <img src="photo/img_04.jpg" alt="city view">
                 <p class="par">TRAVEL</p>
                 <h3>How it's made</h3>
                 <p class="main_p">
